# EcomTrendAI

./: .env.example  .gitignore  CLAUDE.md  DEFINITIONS.md  Dockerfile  README.md  STATUS.md  TASKS.md  Untitled  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run_daily.bat  schedule_task.ps1  vercel.json
.claude/: MONETIZATION_REVIEW.md  settings.json
.github/workflows/: ci.yml
dashboard/: .env.example  .gitignore  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
dashboard/e2e/: accessibility.spec.ts  auth.spec.ts  landing.spec.ts  mobile.spec.ts  pricing.spec.ts  sample-report.spec.ts
dashboard/public/: manifest.json  offline.html  robots.txt  sw.js
dashboard/src/components/: Footer.tsx  (+10 more)
data/raw/: products_20260106_100000.csv
data/social_templates/: buffer_import.csv
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  DEPLOY_GUIDE.md  MONITORING.md  PRE_DEPLOY_CHECKLIST.md  STRIPE_SETUP.md  api_setup.md
logs/claude_runs/: 20260107_231319_init-003.json  20260110_dashboard_impl.json
nginx/: nginx.conf
nginx/conf.d/: api.conf
reports/: trends_20260108.html  trends_20260108.md
scripts/: deploy.py
src/: __init__.py  analyzer.py  api.py  auth.py  config.py  distributor.py  error_handler.py  main.py  middleware.py  referral.py  reporter.py  scraper.py  social_media.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_api.py  test_auth.py  test_distributor.py  test_error_handler.py  test_main.py  test_middleware.py  test_referral.py  test_reporter.py  test_scraper.py  test_social_media.py
(+30 files in other folders)
